Fix hidden "Jump to General Information" tooltip
This seems to have been broken by the update to Polymer v2.

--- a/src/gui/html/css/style.css
+++ b/src/gui/html/css/style.css
@@ -89,6 +89,9 @@ app-toolbar {
 app-drawer-layout:not([narrow]) [drawer-toggle] {
   display: none;
 }
+app-drawer {
+    z-index: inherit;
+}
 app-drawer > * {
     border-right: 1px var(--divider-color) solid;
 }
